Added reason for posting the project up.

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 ZParse is an ancient framework developed at Novikov Design long time ago.
+
+It's posted here for sentimental reasons and to dig up some old ideas.
